@@ -18,6 +18,7 @@ ChangeLog
 2008???? - 1.21.95
 
 [-] * vCard can now store caller group and private flag (bug #269).
+[-] * vCard now stores location and memory type.
     
 20081210 - 1.21.94
 
